feat(emoji): add sqlite-vss

--- a/emoji/package.json
+++ b/emoji/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "cldr-annotations-derived-modern": "^44.1.0",
-    "cldr-annotations-modern": "^44.1.0"
+    "cldr-annotations-modern": "^44.1.0",
+    "sqlite-vss": "^0.1.2"
   }
 }
