--- a/emoji/package.json
+++ b/emoji/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "^1.5.3",
-    "@types/bun": "^1.0.5"
+    "@types/bun": "^1.0.5",
+    "mitata": "^0.1.8"
   },
   "dependencies": {
     "@sroussey/transformers": "^2.14.4",
