feat(emoji): use node-llama-cpp

--- a/emoji/package.json
+++ b/emoji/package.json
@@ -20,6 +20,7 @@
     "@sroussey/transformers": "^2.14.4",
     "cldr-annotations-derived-modern": "^44.1.0",
     "cldr-annotations-modern": "^44.1.0",
+    "node-llama-cpp": "^2.8.6",
     "sqlite-vss": "^0.1.2"
   },
   "pnpm": {
